--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <nav class="navbar">
+    <nav class="navbar flex">
       <div class="navbar__company-brand">
         <span style="font-size: 40px" class="material-symbols-outlined">
           empty_dashboard
@@ -23,7 +24,7 @@
           <li><a href="#">Home</a></li>
           <li><a href="#">Service</a></li>
           <li><a href="#">Why & How</a></li>
-          <li><a href="#">About us</a></li>
+          <li><a href="./about.html">About us</a></li>
         </ul>
         <button class="nav-link__register">
           <a class="register__link" href="#">Join Now</a>
@@ -49,6 +50,17 @@
             <button>Get Started</button>
           </div>
         </div>
+      </div>
+    </section>
+    <section>
+      <div>
+        <video
+          src="./video_20240905_184747.mp4"
+          width="600"
+          controls
+          muted
+          poster="./download.jpg"
+        ></video>
       </div>
     </section>
   </body>
